<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--        Change TextView with Fragment Later-->
        <TextView
            android:id="@+id/date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="4"
            android:layout_gravity="center_vertical"
            android:text="DATE PICKER"/>
        <ImageButton
            android:id="@+id/calendarButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:focusable="true"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:layout_weight="1"
            android:src="@drawable/ic_alarm_calendar" />
    </LinearLayout>
    <EditText
        android:id="@+id/edit_alarm_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLength="20"
        android:maxLines="1"
        android:hint="@string/alarm_title_hint"
        android:autofillHints="Title"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/alarm_cancel" />
        <Button
            android:id="@+id/positive"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_set" />
    </LinearLayout>

</LinearLayout>